# browser-engineering

./: LICENSE  README.md  pyproject.toml  requirements.txt  ui.py  url.py
.cursor/rules/: linting.mdc  python-env.mdc
.github/workflows/: ci.yml
pybrowser/: __init__.py  __main__.py  adblocker.py  browser.py  canvas2d.py  chrome.py  css_parser.py  devtools.py  extensions.py  html_parser.py  js_engine.py  js_interpreter.py  js_runtime.py  layout.py  paint.py  print_pdf.py  renderer.py  tab.py  url.py
pybrowser/js/: __init__.py  engine.py  interpreter.py  runtime.py
pybrowser/js/shims/: dukpy_shim.js  quickjs_shim.js
pybrowser/net/: __init__.py  cookies.py
test-site/: index.html  page2.html  serve.py  ws_server.py
tests/: test_browser_features.py  test_cookies.py  test_css_advanced.py  test_css_parser.py  test_flexbox.py  test_html_parser.py  test_html_parser_rawtext.py  test_js_engine.py  test_js_interpreter.py  test_js_runtime.py  test_tab.py  test_url.py
